--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ Associate Professor of Computer Science</strong><br>
                   <p>
 					  <span class="importantnote">
 			      <strong>
-					  I will be on absence of leave from UMass Amherst starting in January 2025. I am moving to the <a href="https://www.ece.tuc.gr/en/news/item/new-pan-european-distinction-of-the-ece-school-of-the-technical-university-of-crete-for-the-second-year-in-a-row">Technical University of Crete with an ERC consolidator grant. </a><br>
+					  I will be on absence of leave from UMass Amherst starting in January 2025. I will be moving to the <a href="https://www.ece.tuc.gr/en/news/item/new-pan-european-distinction-of-the-ece-school-of-the-technical-university-of-crete-for-the-second-year-in-a-row">Technical University of Crete with an ERC consolidator grant. </a><br>
 				  <!--If you are interested in applying to work with me, please first read  <a href="erc.html">here</a> before reaching out to me!-->
 				  </strong>
 						  </span>
