--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@ Associate Professor of Computer Science</strong><br>
                     <a href="https://www.cics.umass.edu/"> CICS</a>, <a href="https://www.umass.edu/">University of Massachusetts Amherst</a><br>
                   <strong> Also research affiliate at </strong><a href="https://www.cyens.org.cy/en-gb/">CYENS</a><br>
 <br>
-                    <strong> Email:</strong> kalo [AT] cs [DOT] umass [DOT] edu<br>
-                  <strong> Office:</strong> Room CS250, Computer Science Building<br>
+                    <strong> Email:</strong>[first four letters of my last name] [DOT] ai [DOT] lab [AT] gmail [DOT] com<br>
                 </p>
               </td>
             </tr>
