--- a/index.html
+++ b/index.html
@@ -178,10 +178,10 @@ Associate Professor of Computer Science</strong><br>
                     group of students working on graphics+vision. He was a postdoctoral researcher at
                     Stanford University from 2010 to 2012. He obtained his PhD
                     from the University of Toronto in 2010. His <a href="degrees/KALOGERAKIS_PhD_THESIS.pdf">PhD thesis </a> introduced machine learning techniques for geometry processing.
-                    He has served as Area Chair multiple times in CVPR, ICCV, and ECCV. He has also served on
+                    He has served as Area Chair in CVPR, ICCV,  ECCV, NIPS and on
                     technical paper committees for SIGGRAPH,
                     SIGGRAPH ASIA, Eurographics, and the Symposium on Geometry
-                    Processing. He  is an Associate Editor in the
+                    Processing. He  has also served as an Associate Editor in the
                     Editorial Boards of IEEE Transactions on Pattern Analysis
                     and Machine Intelligence (TPAMI) and IEEE Transactions on
                     Visualization &amp; Computer Graphics (TVCG). He   co-chaired <a href="https://eg2024.cyens.org.cy/">Eurographics 2024</a>. He was listed as one of the <a href="https://www.aminer.cn/ai2000/2021/cg">100 most cited computer graphics scholars</a> in the world between 2010-2020 by the Tsinghua's
@@ -2493,7 +2493,9 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
               </td>
             </tr>
             <tr>
-              <td><span> 
+              <td><span> 				  
+				  <a href="courses/game_programming/index.html">
+				  Fall 2024: CMPSCI 576 - Game Programming </a><br>
 			      <a href="courses/visual_computing/index.html">Spring 2024: CMPSCI 574/674 - Intelligent Visual Computing:
                     A Neural Network Approach</a>
 				  <a href="courses/game_programming/index.html"><br>
@@ -2569,9 +2571,9 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
 
                   <p><strong>I have served in the editorial board of:<br>
                   </strong> IEEE Transactions on Pattern Analysis and
-                  Machine Intelligence (TPAMI), 2020-now<br>
+                  Machine Intelligence (TPAMI), 2020-2024<br>
                   IEEE Transactions on Visualization &amp; Computer Graphics
-                  (TVCG), 2020-now<br>					
+                  (TVCG), 2020-2024<br>					
                   Elsevier Computer &amp; Graphics (2018-2021)&nbsp; </p>
 				  
                 <p><strong>I served as Program Commitee Member or Area Chair in the following conferences:</strong> <br>
