--- a/index.html
+++ b/index.html
@@ -2468,15 +2468,13 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
                   <strong> Graduated:</strong><br>
 <a href="https://people.cs.umass.edu/%7Ezhanxu/">Zhan Xu </a>(PhD 2023, next position: research scientist Adobe Research) <br> 					
 <a href="https://people.cs.umass.edu/%7Edliu/">Difan Liu</a> (PhD 2022, next position: research scientist at Adobe Research)<br>					
-				 <a href="https://hippogriff.github.io/">Gopal Sharma</a> (PhD 2022, next position: postdoc at UBC)<br>					  
-<a href="https://people.umass.edu/%7Eyangzhou/">Yang
-                    Zhou</a> (PhD 2021, next position: research scientist at Adobe Research) <br>
-				  <a href="https://sasikiran1996.github.io/"> Sasi Kiran Yelamarthi</a> (MS 2020, next position:  senior research engineer at&nbsp; PlusAI)<br>	
-				  <a href="https://scholar.google.com/citations?user=4NUg-zkAAAAJ&hl=en">Mohamed Nabail</a> (MS 2020, next position: PhD student at the University of Toronto)<br>					
-                  <a href="https://brotherhuang.github.io/">Haibin Huang</a>
-                  (PhD 2017 , next positions: research scientist at Megvii Research and Kuaishou Technology, then Generative AI Researcher at ByteDance)<br>				  
-                  <a href="https://happylun.github.io/">Zhaoliang Lun</a>
-                  (PhD 2017, next position: software engineer at Google)<br>                  
+<a href="https://hippogriff.github.io/">Gopal Sharma</a> (PhD 2022, next position: senior research scientist at Samsung Research)<br>					  
+<a href="https://people.umass.edu/%7Eyangzhou/">Yang Zhou</a> (PhD 2021, next position: research scientist at Adobe Research) <br>
+<a href="https://sasikiran1996.github.io/"> </a><a href="https://brotherhuang.github.io/">Haibin Huang</a>(PhD 2017 , next positions: research scientist at Megvii Research and Kuaishou Technology, then Generative AI researcher at ByteDance)<br>				  
+<a href="https://happylun.github.io/">Zhaoliang Lun</a>(PhD 2017, next position: software engineer at Google)<br>
+<a href="https://sasikiran1996.github.io/">Sasi Kiran Yelamarthi</a> (MS 2020, next position:  senior research engineer at&nbsp; PlusAI)<br>
+<a href="https://scholar.google.com/citations?user=4NUg-zkAAAAJ&hl=en">Mohamed Nabail</a> (MS 2020, next position: PhD student at the University of Toronto)<br>
+                  <a href="https://brotherhuang.github.io/"></a>                   
                 </p>
               </td>
             </tr>
