--- a/index.html
+++ b/index.html
@@ -187,13 +187,11 @@ Associate Professor of Computer Science</strong><br>
                     Visualization &amp; Computer Graphics (TVCG). He   co-chaired <a href="https://eg2024.cyens.org.cy/">Eurographics 2024</a>. He was listed as one of the <a href="https://www.aminer.cn/ai2000/2021/cg">100 most cited computer graphics scholars</a> in the world between 2010-2020 by the Tsinghua's
                     AMiner academic network.</p>
                   <p>
-					  <span class="importantnote">
 			      <strong>
-					  I will be on absence of leave from UMass Amherst starting in January 2025. I will be moving to the <a href="https://www.ece.tuc.gr/en/news/item/new-pan-european-distinction-of-the-ece-school-of-the-technical-university-of-crete-for-the-second-year-in-a-row">Technical University of Crete with an ERC consolidator grant. </a><br>
-				  <!--If you are interested in applying to work with me, please first read  <a href="erc.html">here</a> before reaching out to me!-->
-				  </strong>
-						  </span>
-				  </p>
+					  I will be on absence of leave from UMass Amherst starting in January 2025. I will be moving to the <a href="https://www.ece.tuc.gr/en/news/item/new-pan-european-distinction-of-the-ece-school-of-the-technical-university-of-crete-for-the-second-year-in-a-row">Technical University of Crete with an ERC consolidator grant. </a> <br>
+					  <br>
+				      <span class="importantnote"> 
+						  I have multiple openings for MS/PhD/postdoc/intern positions funded by my ERC grant. If you are interested in applying to work with me, please first read  <a href="erc.html">here</a> before reaching out to me!	Note	that	I am not hiring new students at UMass Amherst.</span></strong></p>
                 </div>
               </td>
             </tr>
