--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ DIV.abstract LI {
               <td width="10" align="left">&nbsp;</td>
               <td width="100%" valign="middle" align="left">
                 <p align="left"><strong>Evangelos Kalogerakis<br>
-Associate Professor of Computer Science</strong><br>
+Associate Professor</strong><br>
                     <a href="https://www.ece.tuc.gr/en/home">ECE</a>, <a href="https://www.tuc.gr/en/home">Technical University of Crete</a><br>
                   <strong> Also research affiliate at </strong><a href="https://cyens.org.cy/">CYENS</a><br>
 <br>
