web site update

--- a/index.html
+++ b/index.html
@@ -191,8 +191,9 @@ Associate Professor</strong><br>
                     AMiner academic network.</p>
                   <p>
 			      <strong>
-				      <span class="importantnote"> 
-						  I have multiple openings for MS/PhD/postdoc/intern positions funded by my ERC grant. If you are interested in applying to work with me, please first read  <a href="erc.html">here</a> before reaching out to me!	Note	that	I am on absence of leave from UMass Amherst -- I am not hiring new students at UMass Amherst.</span></strong></p>
+				      <!-- <span class="importantnote"> 
+						  I have multiple openings for MS/PhD/postdoc/intern positions funded by my ERC grant. If you are interested in applying to work with me, please first read  <a href="erc.html">here</a> before reaching out to me!	Note	that	I am on absence of leave from UMass Amherst -- I am not hiring new students at UMass Amherst.</span>-->
+					</strong></p> 
                 </div>
               </td>
             </tr>
@@ -2490,7 +2491,11 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
               </td>
             </tr>
             <tr>
-              <td><span> 				  
+              <td><span> 		
+				  <p><span><b>Courses I am teaching at the Technical University of Crete:</b><br></span>				  					  				 
+					  Spring 2025: INF 426 - Generative AI </p>
+					  
+					 <p><span><b>Courses I taught at UMass Amherst:</b><br></span>				  
 				  <a href="courses/game_programming/index.html">
 				  Fall 2024: CMPSCI 576 - Game Programming </a><br>
 			      <a href="courses/visual_computing/index.html">Spring 2024: CMPSCI 574/674 - Intelligent Visual Computing:
@@ -2541,10 +2546,10 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
                   <a href="courses/modeling_and_simulation/index_old.html">Fall
                     2013: CMPSCI 690GC - 3D Modeling and Simulation </a><br>
                   <a href="courses/geom_modeling/index.html">Spring 2013: CMPSCI
-                    590GM - Geometric Modeling </a></span><br>
+                    590GM - Geometric Modeling </a><br>
                 <a href="courses/shape_understanding/index.html">Fall 2012:
                   CMPSCI 791SU - Machine Learning for Shape Understanding
-              </a> </td>
+				</a></p></span></td>
             </tr>
           </tbody>
         </table>
@@ -2566,7 +2571,7 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
 					<span>Eurographics 2024</span><br>
 					<span>Shape Modeling International 2018</span></p>
 
-                  <p><strong>I have served in the editorial board of:<br>
+                <p><strong>I have served in the editorial board of:<br>
                   </strong> IEEE Transactions on Pattern Analysis and
                   Machine Intelligence (TPAMI), 2020-2024<br>
                   IEEE Transactions on Visualization &amp; Computer Graphics
@@ -2574,10 +2579,10 @@ Proceedings of ACM MobiSys 2014</span><span> </span><span><br>
                   Elsevier Computer &amp; Graphics (2018-2021)&nbsp; </p>
 				  
                 <p><strong>I served as Program Commitee Member or Area Chair in the following conferences:</strong> <br>
-				  CVPR 2025  (area chair), 2024  (area chair), 2023 (area chair), 2021 (area chair) <br>
-                  ICCV 2025 (area chair), 2023 (area chair), 2021 (area chair)<br>                  				  					
+				  CVPR 2025  (lead area chair), 2024  (area chair), 2023 (area chair), 2021 (area chair) <br>
+                  ICCV 2025 (lead area chair), 2023 (area chair), 2021 (area chair)<br>                  				  					
 				  ECCV 2024 (area chair), 2022 (area chair)<br>
-                  NIPS 2024 (area chair)<br>					
+                  NIPS 2025 (area chair), 2024 (area chair)<br>					
                   SIGGRAPH 2020 (technical papers COI coodinator)<br>
                   SIGGRAPH ASIA 2018-2019 (technical papers), 2015 (technical briefs) <br>
                   Eurographics 2020-2021 (technical papers), 2018 (technical papers), 2015 (short papers), 2014 (short papers)<br>
