--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@ DIV.abstract LI {
 Associate Professor</strong><br>
                     <a href="https://www.ece.tuc.gr/en/home">ECE</a>, <a href="https://www.tuc.gr/en/home">Technical University of Crete</a><br>
                   <strong> Also research affiliate at </strong><a href="https://cyens.org.cy/">CYENS</a><br>
+                  <strong>(and associate professor of Computer Science at UMass Amherst <strong>on leave</strong>)<br></strong>
 <br>
                     <strong> Email:</strong>[first four letters of my last name] [DOT] ai [DOT] lab [AT] gmail [DOT] com<br>
                 </p>
