--- a/papers/bsm/index.html
+++ b/papers/bsm/index.html
@@ -39,8 +39,8 @@
        <p><a href="https://drive.google.com/file/d/1mJBV73KwEoKeIr_yRsbvK7xRqsqVZywo/view?usp=sharing"> FineGrainedClassification.7z</a>, 24MB</p>
     <p>This archive contains the fine-grained classification dataset with training and test split, our results and learned descriptors. Please see readme.txt in this archive for more information</p>
        <p><a href="SourceCode.7z"> SourceCode.7z</a></p>
-    <!--<p>This archive contains source code for our deep-learned model (Beta Shape Machine).</p>
-       <p><a href="https://www.dropbox.com/s/ucxzlt75anxxa5v/bsm_share.zip?dl=0"> bsm_train.zip</a>, 3GB</p>
+    <p>This archive contains source code for our deep-learned model (Beta Shape Machine).</p>
+    <!--<p><a href="https://www.dropbox.com/s/ucxzlt75anxxa5v/bsm_share.zip?dl=0"> bsm_train.zip</a>, 3GB</p>
     <p>This archive contains part of the training data for our BSM, with 3D mesh obj files, sample points and segmentation. It also provide an example code for sampling the trained BSM.</p> -->
 
   	<h2>Presentation</h2>
