--- a/index.html
+++ b/index.html
@@ -1507,14 +1507,14 @@ Proceedings of the International Conference on 3D
               <td class="ptd" height="225" valign="middle" align="right">
                 <div align="justify">
                   <p><span><strong>Data-Driven Shape Analysis and Processing</strong><br>
-                      </span><i>[<a href="papers/EGstar16/data_driven_shape.pdf">PAPER</a>]</i><span><i>[<a
+                      </span><i>[<a href="papers/EGstar16/data_driven_shape.pdf">CGF PAPER</a>][<a href="datadrivenshape/data_driven_shape.pdf">SIGGRAPH ASIA COURSE NOTES</a>]</i><span><i>[<a
 
                             href="datadrivenshape/index.html">PAGE WITH CODE
                             &amp; DATA</a>]</i><br>
-                      </span><i><span>Kai Xu, Vladimir Kim, Qixing Huang, Evangelos Kalogerakis<br>
+                      </span><i><span>Kai Xu, Vladimir Kim, Qixing Huang, Niloy Mitra, Evangelos Kalogerakis<br>
 Computer Graphics Forum</span><span>, </span>Vol. 36,
                         No. 1, 2017<span><br>
-                        </span>(also in Eurographics 2016) <span> <br>
+                        </span>(also presented in Eurographics 2016 and SIGGRAPH ASIA 2016) <span> <br>
                         </span></i><span class="styleAbstract"><br>
                         <em>Abstract: </em>Data-driven methods play an
                       increasingly important role in discovering geometric,
