--- a/erc.html
+++ b/erc.html
@@ -164,7 +164,7 @@
 					      </p>
 							
 							<p>
-                            Οι επιλεγέντες φοιτητές MS/PhD θα αμοίβονται ως ελεύθεροι επαγγελματίες με σύμβαση παροχής υπηρεσιών (σημειώνεται ότι δεν επιβάλλεται ΦΠΑ σε χρηματοδοτήσεις από ευρωπαϊκές πηγές).
+                            Οι επιλεγέντες φοιτητές MS/PhD θα αμοίβονται ως ελεύθεροι επαγγελματίες με σύμβαση ανάθεσης έργου (σημειώνεται ότι δεν επιβάλλεται ΦΠΑ σε χρηματοδοτήσεις από ευρωπαϊκές πηγές).
 							Η μηνιαία αμοιβή κυμαίνεται μεταξύ 2500–3500 ευρώ και καθορίζεται με βάση το επίπεδο σπουδών, τις δεξιότητες και την πρόοδο του φοιτητή. Η συνέχιση της συνεργασίας αξιολογείται περιοδικά, σύμφωνα με την επίδοση και την επίτευξη των ερευνητικών οροσήμων. Οι επιτυχόντες θα εγγραφούν στα αντίστοιχα μεταπτυχιακά/διδακτορικά προγράμματα
                             του Πολυτεχνείου Κρήτης.
                           </p>
