--- a/erc.html
+++ b/erc.html
@@ -116,7 +116,7 @@
                           <p>
                             Αναζητούνται υποψήφιοι που έχουν ολοκληρώσει πρόσφατα ή βρίσκονται κοντά στην ολοκλήρωση
                             του <strong>Προπτυχιακού</strong> ή/και <strong>Μεταπτυχιακού</strong> τους στις <strong>Επιστήμες
-                            Υπολογιστών (Πληροφορική) ή στην  Μηχανική Υπολογιστών (ΗΜΜΥ) </strong>και ενδιαφέρονται έντονα να ασχοληθούν
+                            Υπολογιστών (Πληροφορική) ή στη Μηχανική Υπολογιστών (ΗΜΜΥ) </strong>και ενδιαφέρονται έντονα να ασχοληθούν
                             ερευνητικά με τα αντικείμενα του έργου.
                             Για να υποβάλετε αίτηση, στείλτε e-mail στη διεύθυνση: <br>
                             <code>kalo[DOT]ai[DOT]lab[AT]gmail[DOT]com</code>
@@ -141,7 +141,7 @@
                           <p>
                             <em>
                               Ελάχιστες απαιτήσεις: βαθμολογία προπτυχιακών/μεταπτυχιακών σπουδών τουλάχιστον <strong>8,5/10</strong> στην Επιστήμη Υπολογιστών 
-                             (Πληροφορική) ή στην  Μηχανική Υπολογιστών (ΗΜΜΥ),
+                             (Πληροφορική) ή στη Μηχανική Υπολογιστών (ΗΜΜΥ),
                               πολύ καλές προγραμματιστικές δεξιότητες σε <strong>Python</strong>, και έντονο ενδιαφέρον για<strong> μηχανική
                             μάθηση, δημιουργική τεχνητή νοημοσύνη, υπολογιστική όραση, και γραφικά υπολογιστών. </strong></em>
                           </p>
@@ -164,9 +164,7 @@
 					      </p>
 							
 							<p>
-                            Οι επιλεγέντες φοιτητές MS/PhD θα αμοίβονται ως ελεύθεροι επαγγελματίες με σύμβαση ανάθεσης έργου (σημειώνεται ότι δεν επιβάλλεται ΦΠΑ σε χρηματοδοτήσεις από ευρωπαϊκές πηγές).
-							Η μηνιαία αμοιβή κυμαίνεται μεταξύ 2500–3500 ευρώ και καθορίζεται με βάση το επίπεδο σπουδών, τις δεξιότητες και την πρόοδο του φοιτητή. Η συνέχιση της συνεργασίας αξιολογείται περιοδικά, σύμφωνα με την επίδοση και την επίτευξη των ερευνητικών οροσήμων. Οι επιτυχόντες θα εγγραφούν στα αντίστοιχα μεταπτυχιακά/διδακτορικά προγράμματα
-                            του Πολυτεχνείου Κρήτης.
+							Οι επιλεγέντες φοιτητές MS/PhD θα απασχοληθούν μέσω συμβάσεων ανάθεσης έργου στο πλαίσιο του ερευνητικού προγράμματος, σύμφωνα με τις διαδικασίες του ΕΛΚΕ του Πολυτεχνείου Κρήτης. Η μηνιαία αμοιβή κυμαίνεται μεταξύ 2500–3500 ευρώ και καθορίζεται με βάση το επίπεδο σπουδών, τις δεξιότητες και την πρόοδο του φοιτητή. Η συνέχιση της συνεργασίας αξιολογείται περιοδικά, σύμφωνα με την επίδοση και την επίτευξη των ερευνητικών οροσήμων. Οι επιτυχόντες θα εγγραφούν στα αντίστοιχα μεταπτυχιακά/διδακτορικά προγράμματα του Πολυτεχνείου Κρήτης.													
                           </p>
 
                           <p>
