--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ He has served as Area Chair for CVPR, ICCV, ECCV, and NeurIPS, and on
   and received the
   <em>Most Influential Scholar Award (Honorable Mention)</em>
   for outstanding and vibrant contributions to Computer Graphics
-  from Tsinghua University’s AMiner academic network for the decade 2010–2020.</p>                  
+  from Tsinghua University's AMiner academic network for the decade 2010'2020.</p>                  
 <p>
 			      <strong>
 				      <span class="importantnote"> 
