--- a/erc.html
+++ b/erc.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="el">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>χρηματοδοτούμενες Θέσεις MS/PhD</title>
+  <title>ERC Funded MS/PhD Positions</title>
 
   <style type="text/css">
     body {
@@ -27,30 +27,25 @@
     }
 
     @media screen and (max-width:600px) {
-      /* styling for objects with screen size less than 600px */
       body, table, td, p, a, li, blockquote {
         -webkit-text-size-adjust: none!important;
         font-family: sans-serif;
       }
       table {
-        /* All tables are 100% width */
         width: 100%;
       }
 
       table.responsiveImage {
-        /* Container for images in catalog */
         height: auto !important;
         max-width: 30% !important;
         width: 30% !important;
       }
       table.responsiveContent {
-        /* Content that accompanies the content in the catalog */
         height: auto !important;
         max-width: 66% !important;
         width: 66% !important;
       }
       .top {
-        /* Each Columnar table in the header */
         height: auto !important;
         max-width: 48% !important;
         width: 48% !important;
@@ -61,13 +56,11 @@
     }
 
     @media screen and (max-width:480px) {
-      /* styling for objects with screen size less than 480px */
       body, table, td, p, a, li, blockquote {
         -webkit-text-size-adjust: none!important;
         font-family: sans-serif;
       }
       table {
-        /* All tables are 100% width */
         width: 100% !important;
         border-style: none !important;
       }
@@ -88,97 +81,77 @@
                   <table width="96%" align="left" cellpadding="0" cellspacing="0">
                     <tbody>
                       <tr>
-                        <!-- Τίτλος -->
+                        <!-- Title -->
                         <td align="center" style="font-size: 24px; font-weight: 300; line-height: 1.5em; color: #8C0003; font-family: sans-serif;">
-                          Θέσεις MS και PhD χρηματοδοτούμενες από την ERC (European Research Council) <br>
-                          σε Generative AI
-                        / Vision / Graphics</td>
+                          ERC Funded MS and PhD Positions <br>
+                          in Generative AI / Vision / Graphics</td>
                       </tr>
                       <tr>
-                        <!-- Περιγραφή -->
+                        <!-- Description -->
                         <td align="left" style="font-size: 14px; font-style: normal; font-weight: 100; color: #5C5C5C; line-height: 1.8; text-align: justify; padding: 10px 20px 0 20px; font-family: sans-serif;">
 
                           <p>
-                            Το Πολυτεχνείο Κρήτης φιλοξενεί ένα νέο ερευνητικό έργο χρηματοδοτούμενο από το Ευρωπαϊκό Συμβούλιο Έρευνας (<a href="https://erc.europa.eu/news-events/news/erc-2023-consolidator-grants-results">ERC Consolidator Grant</a>), το οποίο στοχεύει στην ανάπτυξη πρωτοποριακών τεχνολογιών τεχνητής νοημοσύνης για τρισδιάστατα δεδομένα και διαδραστικούς ψηφιακούς κόσμους. Στο πλαίσιο του έργου, προσφέρονται θέσεις για φοιτητές <strong>Μεταπτυχιακού (MS) και Διδακτορικού (PhD) επιπέδου.</strong> Το ερευνητικό έργο με τίτλο <em>«<strong>NEURi3D – Learning to synthesize interactive 3D models</strong>»</em> στοχεύει στην ανάπτυξη
-                            μεθόδων βαθιάς μηχανικής μάθησης για
-                            δημιουργία διαδραστικών τρισδιάστατων μοντέλων και σκηνών, καθώς και έξυπνη επεξεργασία τρισδιάστατων/τετραδιάστατων
-                            σαρώσεων και βίντεο.
-                            Επιστημονικά υπεύθυνος είναι ο
-                            <a href="https://kalo-ai.github.io/">Ευάγγελος Καλογεράκης</a>
-                            και το έργο υλοποιείται στο
-                            <a href="https://www.tuc.gr/en/home">Πολυτεχνείο Κρήτης</a>, στα Χανιά.
+                            The Technical University of Crete hosts a new research project funded by the European Research Council (<a href="https://erc.europa.eu/news-events/news/erc-2023-consolidator-grants-results">ERC Consolidator Grant</a>), which aims to develop cutting-edge artificial intelligence technologies for 3D data and interactive digital worlds. As part of the project, positions are available for students at the <strong>Master's (MS) and Doctoral (PhD)</strong> level. The research project titled <em>“<strong>NEURi3D – Learning to synthesize interactive 3D models</strong>”</em> aims to develop deep learning methods for the creation of interactive 3D models and scenes, as well as smart processing of 3D/4D scans and video. 
+                            The scientific supervisor is <a href="https://kalo-ai.github.io/">Evangelos Kalogerakis</a>, and the project is implemented at the <a href="https://www.tuc.gr/en/home">Technical University of Crete</a>, in Chania.
                           </p>
 
                           <p style="color: #8C0003;">
-                            <strong style="font-style: normal; font-size: 16px;">Αναγκαία Προσόντα &amp; Διαδικασία Αίτησης</strong>
+                            <strong style="font-style: normal; font-size: 16px;">Required Qualifications &amp; Application Process</strong>
                           </p>
 
                           <p>
-                            Αναζητούνται υποψήφιοι που έχουν ολοκληρώσει πρόσφατα ή βρίσκονται κοντά στην ολοκλήρωση
-                            του <strong>Προπτυχιακού</strong> ή/και <strong>Μεταπτυχιακού</strong> τους στις <strong>Επιστήμες
-                            Υπολογιστών (Πληροφορική) ή στη Μηχανική Υπολογιστών (ΗΜΜΥ) </strong>και ενδιαφέρονται έντονα να ασχοληθούν
-                            ερευνητικά με τα αντικείμενα του έργου.
-                            Για να υποβάλετε αίτηση, στείλτε e-mail στη διεύθυνση: <br>
+                            We are looking for candidates who have recently completed or are near completing their <strong>Bachelor's</strong> or/and <strong>Master's</strong> degree in <strong>Computer Science</strong> or <strong>Computer Engineering</strong>, and are highly interested in researching the project's topics.
+                            To apply, please send an email to: <br>
                             <code>kalo[DOT]ai[DOT]lab[AT]gmail[DOT]com</code>
                             <br>
-                            με τίτλο θέματος:
+                            with the subject line:
                             <br>
-                            «Application for ERC-funded MS Position» ή «Application for ERC-Funded PhD Position»,
-                            επισυνάπτοντας τα παρακάτω δικαιολογητικά <strong>(στα Αγγλικά)</strong>:
+                            “Application for ERC-funded MS Position” or “Application for ERC-Funded PhD Position”,
+                            attaching the following documents <strong>(in English)</strong>:
                           </p>
 
                           <p>
-                            (i) Αναλυτικό βιογραφικό (CV) με σπουδές, τυχόν επαγγελματική εμπειρία,
-                            διακρίσεις και δημοσιεύσεις (αν υπάρχουν).<br>
-                            (ii) Σύντομη ερευνητική δήλωση (research statement) με πιθανά ερευνητικά ενδιαφέροντα
-                            και τυχόν προηγούμενη ερευνητική εμπλοκή.<br>
-                            (iii) Αναλυτικές βαθμολογίες (transcripts) και αντίγραφα τίτλων από προπτυχιακές και τυχόν μεταπτυχιακές σπουδές.<br>
-                            (iv) Στοιχεία επικοινωνίας (email) από τουλάχιστον δύο μέλη ΔΕΠ ή ανώτερους ερευνητές
-                            που μπορούν να δώσουν συστατικές επιστολές. Οι υποψήφιοι αποστέλλουν μόνο τα στοιχεία
-                            επικοινωνίας, όχι τις επιστολές.
+                            (i) Detailed CV with studies, any professional experience, awards, and publications (if available).<br>
+                            (ii) A brief research statement with potential research interests and any previous research involvement.<br>
+                            (iii) Detailed transcripts and copies of degrees from undergraduate and any postgraduate studies.<br>
+                            (iv) Contact details (email) of at least two faculty members or senior researchers who can provide reference letters. Candidates only need to provide contact details, not the actual letters.
                           </p>
 
                           <p>
                             <em>
-                              Ελάχιστες απαιτήσεις: βαθμολογία προπτυχιακών/μεταπτυχιακών σπουδών τουλάχιστον <strong>8,5/10</strong> στην Επιστήμη Υπολογιστών 
-                             (Πληροφορική) ή στη Μηχανική Υπολογιστών (ΗΜΜΥ),
-                              πολύ καλές προγραμματιστικές δεξιότητες σε <strong>Python</strong>, και έντονο ενδιαφέρον για<strong> μηχανική
-                            μάθηση, δημιουργική τεχνητή νοημοσύνη, υπολογιστική όραση, και γραφικά υπολογιστών. </strong></em>
+                              Minimum requirements: undergraduate/postgraduate GPA of at least <strong>8.5/10</strong> in Computer Science or Computer Engineering, strong programming skills in <strong>Python</strong>, and a strong interest in <strong>machine learning, creative artificial intelligence, computer vision, and computer graphics.</strong>
+                            </em>
                           </p>
 
                           <p style="color: #8C0003;">
-                            <strong style="font-style: normal; font-size: 16px;">Αντικείμενο Θέσης &amp; Υποχρεώσεις</strong>
+                            <strong style="font-style: normal; font-size: 16px;">Position Details &amp; Responsibilities</strong>
                           </p>
 
                           <p>
-                            Οι φοιτητές MS/PhD αναμένεται να ασχοληθούν με προηγμένη έρευνα σε machine learning,
-                            vision και graphics· να αναπτύξουν και να υλοποιήσουν νέους αλγορίθμους και τεχνικές·
-                            να συνεργάζονται στενά με άλλα μέλη της ερευνητικής ομάδας· να συμμετέχουν σε ερευνητικές
-                            συναντήσεις· να επικοινωνούν αποτελεσματικά στα αγγλικά· και να προετοιμάζουν παρουσιάσεις,
-                            βίντεο-demos και επιστημονικές δημοσιεύσεις σε κορυφαία συνέδρια/περιοδικά όπως
-                            <em>CVPR / ICCV / ECCV, SIGGRAPH / SIGGRAPH ASIA / TOG, NeurIPS / ICML / ICLR</em>.
-                            Οι φοιτητές θα έχουν πρόσβαση σε σύγχρονους deep learning servers με πολυάριθμες GPUs.                          </p>
+                            MS/PhD students are expected to engage in advanced research in machine learning, vision, and graphics; develop and implement new algorithms and techniques; collaborate closely with other team members; participate in research meetings; communicate effectively in English; and prepare presentations, video demos, and scientific publications in top conferences/journals such as 
+                            <em>CVPR / ICCV / ECCV, SIGGRAPH / SIGGRAPH ASIA / TOG, NeurIPS / ICML / ICLR</em>. 
+                            Students will have access to state-of-the-art deep learning servers with numerous GPUs.
+                          </p>
 
                           <p style="color: #8C0003;">
-                            <strong style="font-size: 16px;">Λοιπές Πληροφορίες Θέσης</strong><br>
-					      </p>
-							
-							<p>
-							Οι επιλεγέντες φοιτητές MS/PhD θα απασχοληθούν μέσω συμβάσεων ανάθεσης έργου στο πλαίσιο του ερευνητικού προγράμματος, σύμφωνα με τις διαδικασίες του ΕΛΚΕ του Πολυτεχνείου Κρήτης. Η μηνιαία αμοιβή κυμαίνεται μεταξύ 2500–3500 ευρώ και καθορίζεται με βάση το επίπεδο σπουδών, τις δεξιότητες και την πρόοδο του φοιτητή. Η συνέχιση της συνεργασίας αξιολογείται περιοδικά, σύμφωνα με την επίδοση και την επίτευξη των ερευνητικών οροσήμων. Οι επιτυχόντες θα εγγραφούν στα αντίστοιχα μεταπτυχιακά/διδακτορικά προγράμματα του Πολυτεχνείου Κρήτης.													
+                            <strong style="font-size: 16px;">Other Position Information</strong><br>
                           </p>
 
                           <p>
-                            Για επιλογές MS δείτε
-                            <a href="https://www.mlds.tuc.gr/en/">εδώ</a> ή
-                            <a href="https://www.ece.tuc.gr/en/studies/graduate-studies/msc-in-electrical-and-computer-engineering-1">εδώ</a>.
-                            Για PhD δείτε
-                            <a href="https://www.ece.tuc.gr/en/studies/graduate-studies/phd-in-electrical-and-computer-engineering-1">εδώ</a>.
+                            Selected MS/PhD students will be employed through project contracts as part of the research program, in accordance with the procedures of the Research Committee of the Technical University of Crete. The monthly salary ranges between 2500–3500 euros and is determined based on the student's level, skills, and progress. Continuation of employment is evaluated periodically, based on performance and achievement of research milestones. Successful candidates will be enrolled in the corresponding MS/PhD programs at the Technical University of Crete.
+                          </p>
+
+                          <p>
+                            For MS options, see
+                            <a href="https://www.mlds.tuc.gr/en/">here</a> or
+                            <a href="https://www.ece.tuc.gr/en/studies/graduate-studies/msc-in-electrical-and-computer-engineering-1">here</a>.
+                            For PhD, see
+                            <a href="https://www.ece.tuc.gr/en/studies/graduate-studies/phd-in-electrical-and-computer-engineering-1">here</a>.
                             <br><br>
-                            Η προθεσμία υποβολής αιτήσεων είναι
-                            <span style="color: #8C0003;">28 Φεβρουαρίου 2025</span>.
-                            Μετά από μία διαδικασία προεπιλογής, θα πραγματοποιηθούν συνεντεύξεις μέχρι το τέλος Μαρτίου,
-                            με στόχο οι τελικές αποφάσεις να ανακοινωθούν στις αρχές Απριλίου.
-                            Για οποιαδήποτε διευκρίνιση ή επιπλέον πληροφορίες, μπορείτε να επικοινωνείτε στο
+                            The application deadline is
+                            <span style="color: #8C0003;">February 28, 2025</span>.
+                            After a pre-selection process, interviews will be conducted by the end of March, with the goal of announcing final decisions in early April.
+                            For any clarifications or further information, please contact
                             <code>kalo[DOT]ai[DOT]lab[AT]gmail[DOT]com</code>.
                           </p>
                         </td>
