--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ He has served as Area Chair for CVPR, ICCV, ECCV, and NeurIPS, and on
 			      <strong>
 				      <span class="importantnote"> 
 						  I have multiple openings for MS/PhD positions funded by my ERC grant at the Technical University of Crete. If you are interested in applying to work with me, please first read  <a href="erc.html">here</a> (in English)
-						  or <a href="erc-gr.html">here</a> (in Greek) before reaching out to me!	Note	that	I am on absence of leave from UMass Amherst -- I am not hiring new students at UMass Amherst.</span>
+						  or <a href="erc-gr.html">here</a> (in Greek) before reaching out to me!	Note	that	I am on leave of absence from UMass Amherst -- I am not hiring new students at UMass Amherst.</span>
 					</strong></p> 
                 </div>
               </td>
