--- a/courses/generative_ai/index.html
+++ b/courses/generative_ai/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "https://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-  <title>INF 417: Computer Vision</title>
+  <title>INF 426: Generative AI</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   <link media="all" href="style.css" type="text/css" rel="stylesheet">
 
   <style type="text/css" media="all">
-    /* Keep your existing image float rule for other images on the page */
     img {
       padding-right: 0px;
       padding-left: 10px;
@@ -15,7 +14,6 @@
       padding-top: 20px;
     }
 
-    /* Override float for the teaser so it sits centered under the title */
     #teaser {
       float: none;
       display: block;
@@ -27,7 +25,6 @@
 
     #content {
       margin-left: auto;
-      /* NOTE: expression(...) is an old IE-only hack; kept as-is to avoid content changes */
       width: expression(document.body.clientWidth > 925 ? "925px" : "auto");
       margin-right: auto;
       text-align: left;
@@ -46,8 +43,8 @@
     Generative AI<br>
   </h1>
 
-  <!-- Moved image OUTSIDE the H1 so it appears under the title -->
-  <img id="teaser" alt="teaser" src="teaser.png">
+  <img id="teaser" alt="teaser" src="teaser.png" width="800">
+	<p align="right" style="color: #B3B3B3; font-size:smaller"><em>Image adapted from “Astronaut Riding a Horse (SDXL)”, public domain.</em></p>
 
   <h3>
     <hr>
@@ -96,9 +93,9 @@ Week 6: Diffusion Models<br data-start="537" data-end="540">
 Week 7: Foundation Models<br data-start="565" data-end="568">
 Week 8: Conditioning, Control &amp; Prompting<br data-start="609" data-end="612">
 Week 9: Multimodal Generative Models<br data-start="648" data-end="651">
-Week 10: Generative Models for 3D Content<br data-start="692" data-end="695">
-Week 11: Generative Models of Motion &amp; 4D<br data-start="736" data-end="739">
-Week 12: Neural Rendering<br data-start="764" data-end="767">
+Week 10: Generative Models for 3D Content<br>
+Week 11: Neural Rendering<br data-start="692" data-end="695">
+Week 12: Generative Models of Motion &amp; 4D<br data-start="764" data-end="767">
 Week 13: Evaluation of Generative Models, Deepfake Detection, and Ethics</p>
 
   <h2>Expectations/Requirements</h2>
@@ -109,11 +106,11 @@ Week 13: Evaluation of Generative Models, Deepfake Detection, and Ethics</p>
     <strong>&nbsp;</strong>  </p>
 
   <h2>Grading Criteria</h2>
-  <p>40% Midterm Exam I<br>
-40% Midterm Exam II<br>
-10% Programming assignments<br>
-10% Oral Presentation or Mini-Research Project<br>
-(No final exam) </p>
+  <p>50% Midterm Exam <strong>(a midterm exam score above 50% is required to continue with the course)</strong><br>
+  10% Programming Assignments<br>
+  10% Oral Presentation <br>
+  30% Term  Project<br>
+  (No final exam)</p>
 
   <p><strong>Scores to letter conversions:</strong><br>
     [97.5, 100] =&gt; 10.0<br>
