--- a/index.html
+++ b/index.html
@@ -2628,12 +2628,16 @@ Towards 4D-aware generative models: Creating dynamic, interactive 3D worlds with
             </tr>
             <tr>
               <td><span> 		
-				  <p><span><b>Courses I am teaching at the Technical University of Crete:</b><br></span>				  					  				 
-					  Fall 2025: INF 417 - Computer Vision<span><br>
-					  </span>				  					  				 
-					  Spring 2025: INF 426 - Generative AI </p>
+				  <p><span><b>Links to courses I am teaching at the Technical University of Crete:</b><br></span>				  					  				 
 					  
-					 <p><span><b>Courses I taught at UMass Amherst:</b><br></span>				  
+				  <a href="courses/generative_ai/index.html">
+				  Spring 2026: INF 426 - Generative AI  </a><br>
+				  <a href="courses/computer_vision/index.html">
+				  Fall 2025: INF 417 - Computer Vision  </a><br>
+				  <a href="courses/generative_ai/index.html">
+				  Spring 2025: INF 426 - Generative AI  </a><br>
+			  
+				 <p><span><b>Links to courses I taught at UMass Amherst:</b><br></span>				  
 				  <a href="courses/game_programming/index.html">
 				  Fall 2024: CMPSCI 576 - Game Programming </a><br>
 			      <a href="courses/visual_computing/index.html">Spring 2024: CMPSCI 574/674 - Intelligent Visual Computing:
@@ -2719,7 +2723,7 @@ Towards 4D-aware generative models: Creating dynamic, interactive 3D worlds with
                 <p><strong>I served as Program Commitee Member or Area Chair in the following conferences:</strong> <br>
 				  CVPR 2026, 2025  (lead area chair), 2024  (area chair), 2023 (area chair), 2021 (area chair) <br>
                   ICCV 2025 (lead area chair), 2023 (area chair), 2021 (area chair)<br>                  				  					
-				  ECCV 2024 (area chair), 2022 (area chair)<br>
+				  ECCV 2026 (area chair), 2024 (area chair), 2022 (area chair)<br>
                   NeurIPS 2025 (area chair), 2024 (area chair)<br>					
                   SIGGRAPH 2020 (technical papers COI coodinator)<br>
                   SIGGRAPH ASIA 2018-2019 (technical papers), 2015 (technical briefs) <br>
