--- a/courses/computer_vision/index.html
+++ b/courses/computer_vision/index.html
@@ -117,7 +117,7 @@
     (No final exam)
   </p>
 
-  <p><strong>Scores to letter conversions:</strong><br>
+  <p><strong>Scores to grade conversions:</strong><br>
     [97.5, 100] =&gt; 10.0<br>
     [92.5, 97.5) =&gt; 9.5<br>
     [87.5, 92.5) =&gt; 9.0<br>
@@ -131,7 +131,7 @@
     [50.0, 52.5) =&gt; 5.0
   </p>
 
-  <p>Note: A course grade below 5.0 is not a passing grade.</p>
+  <p>Note: A course grade below 5.0 is not a passing grade (i.e., score less than 50.0) </p>
 
   <h2>Accommodation Statement</h2>
   <p>
