--- a/courses/generative_ai/index.html
+++ b/courses/generative_ai/index.html
@@ -44,7 +44,7 @@
   </h1>
 
   <img id="teaser" alt="teaser" src="teaser.png" width="800">
-	<p align="right" style="color: #B3B3B3; font-size:smaller"><em>Image adapted from ìAstronaut Riding a Horse (SDXL)î, public domain.</em></p>
+	<p align="right" style="color: #B3B3B3; font-size:smaller"><em>Image adapted from ‚ÄúAstronaut Riding a Horse (SDXL)‚Äù, public domain.</em></p>
 
   <h3>
     <hr>
@@ -57,7 +57,7 @@
 
   <h3>
     Location:<br>
-    <span style="color: #1200B4">Thelma Mavridou <span lang="en">Amphitheatre</span></span><br>
+    <span style="color: #1200B4">145P58 (Wednesdays), 141P98/Thelma Mavridou Amphitheatre (Thursdays)</span><br>
     <span style="color: #FF0004"> Students can also join remotely - check moodle.tuc.gr for zoom link</span> <br>
     <br>
     Lecture Notes &amp; Announcements &amp; Other Information: <br>
